--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
   <section class="portifolio">
   <div class="grid">
     <figure>
-      <img class="img-portfolio" src="../Imersao_CSS/img/portifolio.png" alt="Portifólio">
+      <img class="img-portfolio" src="img/portifolio.png" alt="Portifólio">
       <figcaption>Projetos</figcaption>
     </figure>
     <figure>
-      <img class="img-portfolio" src="../Imersao_CSS/img/projetos-pessoais.png" alt=">Projetos Pessoais">
+      <img class="img-portfolio" src="img/projetos-pessoais.png" alt=">Projetos Pessoais">
       <figcaption>Projetos Pessoais</figcaption>
     </figure>
     <figure>
-      <img class="img-portfolio" src="../Imersao_CSS/img/aprenda-comigo.png" alt="Aprenda Comigo">
+      <img class="img-portfolio" src="img/aprenda-comigo.png" alt="Aprenda Comigo">
       <figcaption>Aprenda Comigo</figcaption>
     </figure>
     <figure>
-      <img class="img-portfolio" src="../Imersao_CSS/img/meu-mundo.png" alt="Meu Mundo">
+      <img class="img-portfolio" src="img/meu-mundo.png" alt="Meu Mundo">
       <figcaption>Meu Mundo</figcaption>
     </figure>
   </div>
