--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav class="menu">
       <ul>
         <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#projetos">Projetos</a></li>
+        <li><a href="#portifolio">Projetos</a></li>
         <li><a href="#contato">Contato</a></li>
       </ul>
   </nav>
@@ -42,11 +42,11 @@
 <div class="home"><a href="#inicio"><i class="fas fa-home"></i></a></div>
 
   </header>
-  <section class="portifolio">
+  <section class="portifolio" id="portifolio">
   <div class="grid">
     <figure>
       <img class="img-portfolio" src="img/portifolio.png" alt="Portifólio">
-      <figcaption>Projetos</figcaption>
+      <figcaption>Portifólio</figcaption>
     </figure>
     <figure>
       <img class="img-portfolio" src="img/projetos-pessoais.png" alt=">Projetos Pessoais">
