--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </nav>
   <div>
     <h1 class="titulo">Jéssica Defacio</h1>
-    <h3 class="subtitulo">Desenvolvedora Front-end Jr.</h3>
+    <h3 class="subtitulo">Frontend Web Development Jr.</h3>
   </div>
 
   <script>
